# midori-kage

./: .gitignore  README.md  eslint.config.js  index.html  jest.config.js  main.py  manifest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: code-health.yml  extension-ci.yml
config/: ignore_list.yaml  selectors.yaml
extension/: manifest.json
extension/popup/: popup.css  popup.html  popup.js
extension/scripts/: content.js  selectors.js
legacy/: main.py  pyproject.toml
legacy/config/: selectors.js_backup
legacy/tests/extension/scripts/: content.test.js
legacy_extension/popup/: popup.html
legacy_extension/scripts/: content.js
scripts/: check-sins.sh  check-test-coverage.sh
src/: App.tsx  index.css
src/components/: ControlPanel.tsx  SettingsPanel.tsx  StatusPanel.tsx
src/config/: selectors.ts
src/core/: engine.ts  loop.ts  processor.ts
src/midori_kage/: scraper.py
src/scripts/: content.ts  injector.ts  midori-api.ts  module-finder.ts  serializers.ts
src/services/: bridge.ts  contacts.ts  dom.ts  extractor.ts  messages.ts  navigator.ts
src/types/: global.d.ts  index.ts
src/utils/: common.ts  logger.ts  mouse.ts
tests/: scraper.test.ts  setup.js  test_scraper.py
tests/extension/popup/: popup.test.js
