[tool.poetry]
name = "midori-kage"
version = "0.1.0"
description = "A robust WhatsApp Web Scraper prioritizing safety and maintainability."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "midori_kage", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.40.0"
playwright-stealth = "^1.0.6"
pydantic = "^2.5.0"
loguru = "^0.7.2"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
isort = "^5.12.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
